# suffixarray

./: .gitignore  Main.hs  README.md  Sort.hs  main.hs  suffixarray.cabal
Data/: Auxiliary.hs  CountingSort.hs  SuffixArray.hs
Tests/: Benchmark.hs  Tests.hs
