Name:           suffixarray
Version:        0.0.3
Description:    n log n implementation of suffux array.
License:        GPL
License-file:   LICENSE
Author:	        Victor Denisov
Maintainer:     denisovenator@gmail.com
Build-type:     Simple
Cabal-version:  >=1.2

Executable runTests
        main-is:        Tests/Tests.hs
        build-depends:  base >= 3, HUnit
Executable benchmark
        main-is:        Tests/Benchmark.hs
        build-depends:  base >= 3
        ghc-options:    -rtsopts -O2

Library
        exposed-modules:        Data.SuffixArray, Data.CountingSort
        build-depends:          base >= 3, array, vector
        ghc-options:            -O2
